# ligo_data_analysis

./: .gitignore  Doxyfile  Makefile.am  Makefile.in  README.md  comp  config.h  config.h.in  configure  configure.ac  timedelay.c
docs/: conf.py  doc_index.rst
documents/: conversion_report.pages
libcore/: Makefile.am  Makefile.am.OLD  Makefile.in  detector.c  detector.h  detector_antenna_patterns.c  detector_antenna_patterns.h  detector_mapping.c  detector_mapping.h  detector_network.c  detector_network.h  detector_time_delay.c  detector_time_delay.h  hdf5_file.c  hdf5_file.h  inspiral_chirp.c  inspiral_chirp.h  inspiral_chirp_factors.c  inspiral_chirp_factors.h  inspiral_chirp_time.c  inspiral_chirp_time.h  inspiral_network_statistic.c  inspiral_network_statistic.h  inspiral_stationary_phase.c  inspiral_stationary_phase.h  random.c  random.h  sampling_system.c  sampling_system.h  settings_file.c  settings_file.h  sky.h  spectral_density.c  spectral_density.h  strain.c  strain.h
libpso/: Makefile.am  gbestpso.c  inspiral_pso_fitness.c  inspiral_pso_fitness.h  lbestpso.c  parallel.c  parallel.h  pso.c  pso.h  ptapso.c  ptapso.h  ptapso_maxphase.c  ptapso_maxphase.h  spso.c
notebooks/: Makefile.am  Makefile.in  lda_test_pso.ipynb  lda_test_sky_map.ipynb
programs/: Makefile.am
programs/coherent_network_analysis/: lda_test_pso_main.c
programs/compute_missing_network_statistic_info/: Makefile.am  lda_compute_missing_network_statistic_info.c
programs/condition_number/: Makefile.am  lda_condition_number.c
programs/fitness_function_eval/: Makefile.am  lda_fitness_function_eval.c
programs/histogram/: Makefile.am  lda_test_chirp_0_hist.c  lda_test_snr_hist_main.c
programs/matlab_data/: Makefile.am  lda_matlab_pso_main.c
programs/matlab_data_mpi/: Makefile.am  lda_matlab_data_mpi.c
programs/matlab_data_serial/: Makefile.am  lda_matlab_data_serial.c
programs/save_psd_to_file/: Makefile.am  lda_save_psd_to_file.c
programs/simulate_data/: Makefile.am  inspiral_chirp_factors.c  inspiral_chirp_factors.h  inspiral_signal.c  inspiral_signal.h  lda_simulate_data_main.c  options.c  simulate_noise.c  simulate_noise.h  simulation_file.c  simulation_file.h  simulation_options.c  simulation_settings.c  simulation_settings.h
programs/simulate_signal/: inspiral_signal.c  inspiral_signal.h  lda_simulate_data_main.c  options.c  options.h  simulate_noise.h
programs/skymap/: lda_test_sky_map_main.c
programs/strain_txt_to_hdf5/: strain.c
settings/: Makefile.am  lda_lonestar.pbs  pso.cfg  pso_paper.cfg  settings.cfg
src_c/: Makefile.am  Makefile.in  antenna_patterns.c  antenna_patterns.h  antennapattern.c  array.c  array.h  chirp.c  chirp.h  common.h  conditionnum_cal.c  datagen.c  datagen.h  detector.c  detector.h  detector_antenna_patterns.c  detector_antenna_patterns.h  detector_mapping.c  detector_mapping.h  detector_network.c  detector_network.h  detector_time_delay.c  detector_time_delay.h  filenames_to_text.c  gslhdf5_io.c  gslhdf5_io.h  inspiral_chirp.c  inspiral_chirp.h  inspiral_network_statistic.c  inspiral_network_statistic.h  inspiral_pso_fitness.c  inspiral_pso_fitness.h  inspiral_signal.c  inspiral_signal.h  inspiral_source.c  inspiral_stationary_phase.c  inspiral_stationary_phase.h  inspiral_template.c  inspiral_template.h  lda.h  (+52 more)
src_matlab/: antennapattern.m  coherent_new_sec2.m  conditionnum_cal.m  datagen.m  debug.m  debug_fft.m  filenames_to_text.m  marc_coherent_new_sec2.m  save_comparison_data.m  strain.xlsx  templategen.m  test_c.m  timedelay.m
tests/: Makefile.am  libcore_test.cpp
