# This is organized as a convenience library

noinst_LTLIBRARIES = libcore.la

libcore_la_SOURCES = \
	detector_antenna_patterns.c \
	detector_antenna_patterns.h \
	detector_mapping.c \
	detector_mapping.h \
	detector_network.c \
	detector_network.h \
	detector_time_delay.c \
	detector_time_delay.h \
	detector.c \
	detector.h \
	hdf5_file.c \
	hdf5_file.h \
	inspiral_chirp_factors.c \
	inspiral_chirp_factors.h \
	inspiral_chirp_time.h \
	inspiral_chirp.c \
	inspiral_chirp.h \
	inspiral_network_statistic.c \
	inspiral_network_statistic.h \
	inspiral_stationary_phase.c \
	inspiral_stationary_phase.h \
	random.c \
	random.h \
	sampling_system.c \
	sampling_system.h \
	settings_file.c \
	settings_file.h \
	sky.h \
	spectral_density.c \
	spectral_density.h \
	strain.c \
	strain.h
	
libcore_la_LIBADD = -lgsl -lgslcblas -lhdf5 -lhdf5_hl -lm
