AM_CPPFLAGS = -I$(top_srcdir)/libcore -I$(top_srcdir)/libpso

bin_PROGRAMS = lda_compute_missing_network_statistic_info

lda_compute_missing_network_statistic_info_LDADD = ../../libcore/libcore.la ../../libpso/libpso.la
lda_compute_missing_network_statistic_info_SOURCES = lda_compute_missing_network_statistic_info.c
